--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -48,12 +48,15 @@ a{
 }
 
 @media (max-width: 1100px){
-    .nav-about, .nav-competences, .nav-projets, .nav-contact{
-        transform: translateX(0);
+    .nav-about, 
+    .nav-competences, 
+    .nav-projets, 
+    .nav-contact{
+        transform: translateX(0)
     }
     .nav{
         top: calc(100vh - 8rem);
-        translate: translateX(-50%);
+        transform: translateX(-50%);
     }
     .nav-link{
         width: 2rem;
