Correction mobile et ajout du cv

--- a/src/styles/projectsMenu.css
+++ b/src/styles/projectsMenu.css
@@ -3,7 +3,7 @@
     position: fixed;
     display: flex;
     top: 25%;
-    left: 50%;
+    left: 45%;
     transform: translateX(-50%);
 }
 
@@ -89,6 +89,7 @@
         width: 28rem;
         top: 20%;
         transform: translateX(-50%);
+        left: 50%;
     }
     .project-item{
         height: 2rem;
@@ -107,16 +108,31 @@
         width: 28rem;
         flex-direction: column;
         align-items: center;
+        left: 50%;
+        top: 15%;
+    }
+    .project-item.activeProject .title{
+        font-size: 1.3rem;
+    }
+    .title{
+        font-size: 1rem;
     }
     .project-menu p{
-        font-size: 0.7rem   ;
+        font-size: 1rem   ;
     }
     .project-sub-container{
-        margin-top: 1rem;
-        width: 12rem;
+        margin-top: 0.3rem;
+        width: 20rem;
+        font-size: 1.2rem;
+        background: linear-gradient(90deg, rgba(0,0,0,0.25), rgba(255, 255, 255, 0)) !important;
+        border-radius: 20px;
+        padding: 5%;
+    }
+    .project-sub-container h3{
+        font-size: 1.1rem;
     }
     .project-sub-container img{
-        width: 12rem;
+        width: 20rem;
     }
     .link-container a{
         margin-top: 0.5rem;
@@ -125,5 +141,19 @@
     }
     .project-items-container{
         margin-top: 0;
+        left: 20%;
+        padding-bottom: 0%;
+    }
+    .project-item{
+        height: 3rem;
+        width: 90%;
+        display: flex;
+        position: relative;
+        justify-content: flex-end;
+        align-items: center;
+        cursor: pointer;
+    }
+    .project-item.activeProject{
+        width: 75%;
     }
 }
