--- a/src/styles/aboutMenu.css
+++ b/src/styles/aboutMenu.css
@@ -116,14 +116,17 @@
 
 @media (max-width: 700px){
     .sub-container{
-        width: 15rem;
-        top: 50%;
-        left: 50;
+        width: 20rem;
+        top: 45%;
+        left: 50%;
         transform: translateX(-50%);
+        background: linear-gradient(90deg, rgba(0,0,0,0.25), rgba(255, 255, 255, 0)) !important;
+        border-radius: 20px;
+        padding: 5%;
     }
     .title{
         font-size: 0.8rem;
-        padding-right: 2.5rem;
+        padding-right: 0.8rem;
     }
     .active-subheading .p-container{
         font-size: 0.8rem;
@@ -137,4 +140,25 @@
     h2,h3, p{
         font-size: 0.8rem;
     }
+    .menu{
+        width: 19rem;
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        top: 60%;
+        transform: translateY(-60%);
+        left: 10vw;
+        left: -6% !important;
+    }
+    
+    .item{
+        height: 3rem;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        cursor: pointer;
+        padding-right: 5%;
+    }
+
 }
