--- a/src/styles/avatar.css
+++ b/src/styles/avatar.css
@@ -21,6 +21,8 @@
 .shadow-overlay-skills {
     height: 100vh;
     width: 100vh;
+    left: 0%;
+    top: 0%;
     display: block;
     position: fixed;
     background: linear-gradient(90deg, rgba(0,0,0,0.25), rgba(255, 255, 255, 0));
