--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -83,6 +83,27 @@ label{
     display: none;
 }
 
+.buttonCv a{
+    margin-top: -25% !important;
+    font-size: 30px !important;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 20px;
+    width: auto;
+    height: auto;
+    padding: 3%;
+    margin-bottom: 0%;
+    text-decoration: none; 
+    color: white;
+    text-align: center;
+}
+.buttonCv:hover a{
+    padding: 4%;
+}
+.orMessageMe{
+    text-align: center;
+    font-size: 1.5rem;
+}
+
 @media (max-width: 1100px){
     .contact-menu{
         top: 50%;
@@ -101,5 +122,24 @@ label{
     }
     .success-message p{
         padding: 0 0.5rem;
+    }
+    .buttonCv a{
+        margin-top: 15% !important;
+        font-size: 1rem !important;
+        border-radius: 20px;
+        width: auto;
+        height: auto;
+        padding: 3%;
+        margin-bottom: 0%;
+        text-decoration: none; 
+        color: white;
+        text-align: center;
+    }
+    .buttonCv:hover a{
+        padding: 4%;
+    }
+    .orMessageMe{
+        text-align: center;
+        font-size: 1rem;
     }
 }
