--- a/src/styles/playerStats.css
+++ b/src/styles/playerStats.css
@@ -42,14 +42,26 @@ h2{
     #playerStats{
         left: 50%;
         transform: translateX(-50%);
-        width: 10rem;
-        height: 2.5rem;
+        width: 15rem;
+        height: 3.5rem;
         top: 2rem;
     }
     h1{
-        font-size: 0.8rem;
+        font-size: 1.2rem;
     }
     h2,h3,p{
-        font-size: 0.7rem;
+        font-size: 0.9rem;
+    }
+    #playerStats__lines__thick{
+        display: block;
+        background-color: white;
+        height: 0.35rem;
+        width: 5rem;
+    }
+    #playerStats__lines__thin{
+        display: block;
+        background-color: lightgray;
+        height: 0.1rem;
+        width: 8rem;
     }
 }
