--- a/src/styles/aboutMenu.css
+++ b/src/styles/aboutMenu.css
@@ -102,6 +102,10 @@
     padding: 0.5rem 0 0.5rem 1rem;
 }
 
+p{
+    margin-left: 5% !important;
+}
+
 @media (max-width: 1100px){
     .sub-container{
         right: 1rem;
