--- a/src/styles/skillsMenu.css
+++ b/src/styles/skillsMenu.css
@@ -191,3 +191,33 @@
         font-size: 3rem;
     }
 }
+
+@media screen and (orientation: landscape) {
+    .skill-menu{
+        left: 55%;
+    }
+    .skill-item{
+        height: 3rem;
+        width: 12rem;
+        margin-right: -90%;
+    }
+    .skill-sub-container{
+        margin-top: -3rem;
+        gap: 0.2rem;
+        padding: 3%;
+        margin-left: -18%;
+    }
+    .skill-sub-container h3{
+        font-size: 0.6rem;
+        padding-right: 2%;
+        width: 100%;
+    }
+    .skill-sub-container-1, .skill-sub-container-2{
+        gap: 0rem;
+    }
+    .level-point{
+        width: 0.9rem;
+        height: 0.9rem;
+        border-radius: 0.1rem;
+    }
+}
